vcs/specs/parser/fail/attributes/invalid_cfg_syntax.vr
// @test: parse-fail
// @level: L0
// @tags: parser, attributes, cfg, error
// @description: Test invalid empty cfg attribute
// @expected-error: E015

@cfg()
fn test() {}
